--- a/index.html
+++ b/index.html
@@ -262,53 +262,56 @@
       color: var(--green);
     }
 
-    /* Testimonials Masonry */
+    /* Testimonials Grid */
+    .testimonials-section .container {
+      max-width: 1000px;
+    }
+
     .testimonials {
-      column-count: 1;
-      column-gap: 20px;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 24px;
     }
 
-    @media (min-width: 500px) {
+    @media (min-width: 700px) {
       .testimonials {
-        column-count: 2;
-      }
-    }
-
-    @media (min-width: 800px) {
-      .testimonials {
-        column-count: 3;
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
       }
     }
 
     .testimonials img {
       width: 100%;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 3px 12px rgba(0,0,0,0.1);
-      break-inside: avoid;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.12);
     }
 
     /* Final CTA Section */
     .final {
       text-align: center;
+      background: linear-gradient(135deg, var(--green) 0%, var(--green-light) 100%);
+      padding: 90px 20px;
     }
 
     .final h2 {
-      margin-bottom: 30px;
+      color: white;
+      font-size: clamp(2rem, 4vw, 2.8rem);
+      margin-bottom: 40px;
     }
 
     .final-details {
-      max-width: 480px;
-      margin: 0 auto 35px;
+      max-width: 520px;
+      margin: 0 auto 45px;
       text-align: left;
       background: white;
-      padding: 28px 32px;
-      border-radius: 10px;
-      box-shadow: 0 3px 15px rgba(0,0,0,0.06);
+      padding: 32px 38px;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+      font-size: 1.05rem;
     }
 
     .final-details p {
-      margin: 0 0 12px;
+      margin: 0 0 14px;
       color: var(--text);
     }
 
@@ -318,6 +321,11 @@
 
     .final-details strong {
       color: var(--green);
+    }
+
+    .final .cta {
+      font-size: 1.25rem;
+      padding: 20px 60px;
     }
 
     /* Footer link */
@@ -488,7 +496,7 @@
     </div>
   </section>
 
-  <section class="alt">
+  <section class="alt testimonials-section">
     <div class="container">
       <h2>What Past Students Say</h2>
       <div class="testimonials">
@@ -502,7 +510,7 @@
     </div>
   </section>
 
-  <section class="alt final">
+  <section class="final">
     <div class="container">
       <h2>Ready to Register?</h2>
       <div class="final-details">
