Update footer with copyright

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
   </section>
 
   <footer class="footer">
-    <a href="https://nathankoerschner.com">nathankoerschner.com</a>
+    © 2025 Nathan Koerschner · Asheville, NC
   </footer>
 
   <script src="//embed.typeform.com/next/embed.js"></script>
