Integrate Typeform registration

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </div>
       </div>
       <p class="spots">Limited to 3 students</p>
-      <button class="cta" data-tf-popup="YOUR_TYPEFORM_ID" data-tf-opacity="100" data-tf-size="100">Register Now</button>
+      <button class="cta" data-tf-popup="xDindzGP" data-tf-opacity="100" data-tf-size="100">Register Now</button>
     </div>
   </section>
 
@@ -520,7 +520,7 @@
         <p><strong>Cost:</strong> Free</p>
         <p><strong>What to bring:</strong> Just yourself—all materials provided</p>
       </div>
-      <button class="cta cta-large" data-tf-popup="YOUR_TYPEFORM_ID" data-tf-opacity="100" data-tf-size="100">Register Now</button>
+      <button class="cta cta-large" data-tf-popup="xDindzGP" data-tf-opacity="100" data-tf-size="100">Register Now</button>
     </div>
   </section>
 
