Change register to apply

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </div>
       </div>
       <p class="spots">Limited to 3 students</p>
-      <button class="cta" data-tf-popup="xDindzGP" data-tf-opacity="100" data-tf-size="100">Register Now</button>
+      <button class="cta" data-tf-popup="xDindzGP" data-tf-opacity="100" data-tf-size="100">Apply Now</button>
     </div>
   </section>
 
@@ -513,14 +513,14 @@
 
   <section class="final">
     <div class="container">
-      <h2>Ready to Register?</h2>
+      <h2>Ready to Apply?</h2>
       <div class="final-details">
         <p><strong>When:</strong> Saturday & Sunday, February 21-22, 2026 · 10am–3pm</p>
         <p><strong>Where:</strong> ImageSmith Communications · 19 Walden Dr, Arden, NC 28704</p>
         <p><strong>Cost:</strong> Free</p>
         <p><strong>What to bring:</strong> Just yourself—all materials provided</p>
       </div>
-      <button class="cta cta-large" data-tf-popup="xDindzGP" data-tf-opacity="100" data-tf-size="100">Register Now</button>
+      <button class="cta cta-large" data-tf-popup="xDindzGP" data-tf-opacity="100" data-tf-size="100">Apply Now</button>
     </div>
   </section>
 
