Update weekend schedule

--- a/index.html
+++ b/index.html
@@ -426,23 +426,19 @@
           <div class="schedule-items">
             <div class="schedule-item">
               <span class="time">10:00am</span>
-              <span class="activity">Welcome & Strategy Overview</span>
+              <span class="activity">Welcome & Overview</span>
             </div>
             <div class="schedule-item">
-              <span class="time">10:30am</span>
-              <span class="activity">Test-taking tactics and approaches</span>
+              <span class="time">10:45am</span>
+              <span class="activity">Full Practice Test</span>
             </div>
             <div class="schedule-item">
-              <span class="time">11:30am</span>
-              <span class="activity">Practice section + group review</span>
-            </div>
-            <div class="schedule-item">
-              <span class="time">12:30pm</span>
+              <span class="time">1:45pm</span>
               <span class="activity">Break</span>
             </div>
             <div class="schedule-item">
-              <span class="time">1:00pm</span>
-              <span class="activity">Full practice test (timed sections)</span>
+              <span class="time">2:00pm</span>
+              <span class="activity">Test Review</span>
             </div>
             <div class="schedule-item">
               <span class="time">3:00pm</span>
@@ -455,23 +451,23 @@
           <div class="schedule-items">
             <div class="schedule-item">
               <span class="time">10:00am</span>
-              <span class="activity">Practice test results review</span>
+              <span class="activity">Personalized Practice Test</span>
             </div>
             <div class="schedule-item">
-              <span class="time">11:00am</span>
-              <span class="activity">Deep dive: commonly missed question types</span>
+              <span class="time">11:30am</span>
+              <span class="activity">Deep dive into problem areas</span>
             </div>
             <div class="schedule-item">
-              <span class="time">12:00pm</span>
+              <span class="time">12:15pm</span>
+              <span class="activity">Targeted practice</span>
+            </div>
+            <div class="schedule-item">
+              <span class="time">1:00pm</span>
               <span class="activity">Break</span>
             </div>
             <div class="schedule-item">
-              <span class="time">12:30pm</span>
-              <span class="activity">Targeted practice on weak areas</span>
-            </div>
-            <div class="schedule-item">
-              <span class="time">2:00pm</span>
-              <span class="activity">Strategy reinforcement & next steps</span>
+              <span class="time">1:15pm</span>
+              <span class="activity">Strategy reinforcement & home prep approach</span>
             </div>
             <div class="schedule-item">
               <span class="time">3:00pm</span>
