Update Day 2 to end at 2pm

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
   <section class="alt">
     <div class="container">
       <h2>The Weekend Schedule</h2>
-      <p>Two focused days, 10am–3pm each. All materials provided—students just need to show up ready to work.</p>
+      <p>Two focused days. All materials provided—students just need to show up ready to work.</p>
       <div class="schedule">
         <div class="day">
           <h3>Saturday, February 21</h3>
@@ -470,8 +470,8 @@
               <span class="activity">Strategy reinforcement & home prep approach</span>
             </div>
             <div class="schedule-item">
-              <span class="time">3:00pm</span>
-              <span class="activity">Wrap up</span>
+              <span class="time">2:00pm</span>
+              <span class="activity">End of Day 2</span>
             </div>
           </div>
         </div>
@@ -511,7 +511,7 @@
     <div class="container">
       <h2>Ready to Apply?</h2>
       <div class="final-details">
-        <p><strong>When:</strong> Saturday & Sunday, February 21-22, 2026 · 10am–3pm</p>
+        <p><strong>When:</strong> Saturday & Sunday, February 21-22, 2026 · 10am–3pm / 10am–2pm</p>
         <p><strong>Where:</strong> ImageSmith Communications · 19 Walden Dr, Arden, NC 28704</p>
         <p><strong>Cost:</strong> Free</p>
         <p><strong>What to bring:</strong> Just yourself—all materials provided</p>
