Remove address, location provided upon confirmation

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
       <h2>Ready to Apply?</h2>
       <div class="final-details">
         <p><strong>When:</strong> Saturday & Sunday, February 21-22, 2026 · 10am–3pm / 10am–2pm</p>
-        <p><strong>Where:</strong> ImageSmith Communications · 19 Walden Dr, Arden, NC 28704</p>
+        <p><strong>Where:</strong> Arden, NC (location provided upon confirmation)</p>
         <p><strong>Cost:</strong> Free</p>
         <p><strong>What to bring:</strong> Just yourself—all materials provided</p>
       </div>
