Swap testimonial: use Matt Merritt in benefits section

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             </div>
           </div>
         </div>
-        <img src="images/testimonial-brianschoolfield.png" alt="Testimonial from Brian Schoolfield" class="benefits-testimonial">
+        <img src="images/testimonial-mattmerrittt.png" alt="Testimonial from Matt Merritt" class="benefits-testimonial">
       </div>
     </div>
   </section>
@@ -522,7 +522,7 @@
         <img src="images/testimonial-morgenyeakley.png" alt="Testimonial from Morgen Yeakley">
         <img src="images/testimonial-billbarber.png" alt="Testimonial from Bill Barber">
         <img src="images/testimonial-crystalsmithcatinella.png" alt="Testimonial from Crystal Smith-Catinella">
-        <img src="images/testimonial-mattmerrittt.png" alt="Testimonial from Matt Merritt">
+        <img src="images/testimonial-brianschoolfield.png" alt="Testimonial from Brian Schoolfield">
         <img src="images/testimonial-alisonschuetze.png" alt="Testimonial from Alison Schuetze">
       </div>
     </div>
