Remove Writing, focus on Math and Reading

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             <div class="benefit-icon">&#10003;</div>
             <div>
               <strong>Adaptive Focus</strong>
-              <p>Math, Reading, Writing—we'll adjust based on individual needs</p>
+              <p>Math or Reading—we'll adjust based on individual needs</p>
             </div>
           </div>
         </div>
