Add Open Graph image for social sharing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SAT Prep Weekend | Nathan Koerschner</title>
   <meta name="description" content="Free weekend SAT prep seminar in Asheville, NC. Personalized strategies, full practice test, and immediate feedback. Limited to 5 students.">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="SAT Prep Weekend | Free Test Prep in Asheville">
+  <meta property="og:description" content="Free weekend SAT prep for high school students. Full practice test, personalized feedback, and proven strategies. Limited to 5 students.">
+  <meta property="og:image" content="https://nathankoerschner.com/prep-weekend/images/og-image.png">
+  <meta property="og:url" content="https://nathankoerschner.com/prep-weekend/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="SAT Prep Weekend | Free Test Prep in Asheville">
+  <meta name="twitter:description" content="Free weekend SAT prep for high school students. Full practice test, personalized feedback, and proven strategies.">
+  <meta name="twitter:image" content="https://nathankoerschner.com/prep-weekend/images/og-image.png">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
