Add Google Analytics tracking

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
   <meta name="twitter:description" content="Free weekend SAT prep for high school students. Full practice test, personalized feedback, and proven strategies.">
   <meta name="twitter:image" content="https://nathankoerschner.com/prep-weekend/images/og-image.png">
 
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Z30YK9FZ2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4Z30YK9FZ2');
+  </script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -562,7 +571,7 @@
         <p><strong>When:</strong> Saturday & Sunday, February 21-22, 2026 · 10am–3pm / 10am–2pm</p>
         <p><strong>Where:</strong> Arden, NC (location provided upon confirmation)</p>
         <p><strong>Cost:</strong> Free</p>
-        <p><strong>What to bring:</strong> Just yourself—all materials provided</p>
+        <p><strong>What to bring:</strong> Your graphing calculator—everything else provided</p>
       </div>
       <button class="cta cta-large" data-tf-popup="xDindzGP" data-tf-opacity="100" data-tf-size="100">Apply Now</button>
     </div>
