Update schedule: Test-taking Strategy

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
           <div class="schedule-items">
             <div class="schedule-item">
               <span class="time">10:00am</span>
-              <span class="activity">Welcome and test strategies</span>
+              <span class="activity">Test-taking Strategy</span>
             </div>
             <div class="schedule-item">
               <span class="time">10:45am</span>
