Update Day 2 schedule and title case entries

--- a/index.html
+++ b/index.html
@@ -512,12 +512,8 @@
               <span class="activity">Personalized Practice Test</span>
             </div>
             <div class="schedule-item">
-              <span class="time">11:30am</span>
-              <span class="activity">Deep dive into problem areas</span>
-            </div>
-            <div class="schedule-item">
-              <span class="time">12:15pm</span>
-              <span class="activity">Targeted practice</span>
+              <span class="time">12:00pm</span>
+              <span class="activity">Targeted Practice</span>
             </div>
             <div class="schedule-item">
               <span class="time">1:00pm</span>
@@ -525,7 +521,7 @@
             </div>
             <div class="schedule-item">
               <span class="time">1:15pm</span>
-              <span class="activity">Strategy reinforcement & home prep approach</span>
+              <span class="activity">Strategy Reinforcement & Home Prep Approach</span>
             </div>
             <div class="schedule-item">
               <span class="time">2:00pm</span>
