Update schedule intro to mention graphing calculator

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
   <section class="alt">
     <div class="container">
       <h2>The Weekend Schedule</h2>
-      <p>Two focused days. All materials provided—students just need to show up ready to work.</p>
+      <p>Two focused days. Bring a graphing calculator—everything else provided.</p>
       <div class="schedule">
         <div class="day">
           <h3>Saturday, February 21</h3>
