Update what to bring: laptop + charger and graphing calculator

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
   <section class="alt">
     <div class="container">
       <h2>The Weekend Schedule</h2>
-      <p>Two focused days. Bring a graphing calculator—everything else provided.</p>
+      <p>Two focused days. Bring your laptop and charger, plus a graphing calculator if you have one.</p>
       <div class="schedule">
         <div class="day">
           <h3>Saturday, February 21</h3>
@@ -567,7 +567,7 @@
         <p><strong>When:</strong> Saturday & Sunday, February 21-22, 2026 · 10am–3pm / 10am–2pm</p>
         <p><strong>Where:</strong> Arden, NC (location provided upon confirmation)</p>
         <p><strong>Cost:</strong> Free</p>
-        <p><strong>What to bring:</strong> Your graphing calculator—everything else provided</p>
+        <p><strong>What to bring:</strong> Your laptop and charger, plus a graphing calculator if you have one</p>
       </div>
       <button class="cta cta-large" data-tf-popup="xDindzGP" data-tf-opacity="100" data-tf-size="100">Apply Now</button>
     </div>
